--- a/sdf_asp_net/Views/Shared/_Layout2.cshtml
+++ b/sdf_asp_net/Views/Shared/_Layout2.cshtml
@@ -18,8 +18,8 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">.Project</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="width:auto;">
+        <a class="navbar-brand" href="#">PKP</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="card">
-                <div class="list-group" id="discussion" style="width: 350px; height: auto; background: lavender;">
+                <div class="list-group" id="discussion" style="width: a; height: auto; background: lavender;">
                     <a href="#" class="list-group-item list-group-item-action active">
                         Online User
                     </a>
@@ -105,9 +105,7 @@
         </div>
     </div>
 
-    <div class="footer">
-        <h2>Footer</h2>
-    </div>
+    
 
     <div class="modal fade" id="userListeModal" tabindex="-1" role="dialog" aria-labelledby="userListeModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
