--- a/sdf_asp_net/Views/Account/Confirm.cshtml
+++ b/sdf_asp_net/Views/Account/Confirm.cshtml
@@ -2,7 +2,13 @@
 @{
     ViewBag.Title = "Eine bestätigung E-mail wurde zu dieser E-mail adresse gesendet : ";
 }
-<h2>@ViewBag.Title</h2>
+
+<style type="text/css">
+    .message{
+        color:red;
+    }
+</style>
+<h2>@ViewBag.Title  @ViewBag.Email</h2>
 
 <div class="row">
     <div class="col-md-8">
@@ -11,8 +17,8 @@
         {
             @Html.AntiForgeryToken()
             <div class="col-md-8">
-                <p>@ViewBag.Email</p>
-                <p> Bitte checken Sie Ihre Posteingang  </p>
+                
+                <h4 class="message"> Bitte checken Sie Ihre Posteingang  </h4>
             </div>
         }
     </div>
