--- a/sdf_asp_net/Views/Home/Contact.cshtml
+++ b/sdf_asp_net/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Kontakt";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
   
 <div class="container">
     <div class="card" style="width: 18rem;">
