db changes again

--- a/sdf_asp_net/Views/Home/MyCalendar.cshtml
+++ b/sdf_asp_net/Views/Home/MyCalendar.cshtml
@@ -82,7 +82,8 @@
                 <p id="pDetails"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal"
+                        style="font-variant-caps: all-small-caps">Close</button>
             </div>
         </div>
     </div>
@@ -130,7 +131,7 @@
                 if ($("#edate").val() != null) {
                     end = $("#edate").val() + " " + $("#etime").val();
                 }
-                
+
                 var event = {};
                 event.subject = $("#subject").val();
                 event.description = $("#description").val();
@@ -190,7 +191,9 @@
                             $description.append($('<p/>')
                                 .html('<b>End:</b>' + calEvent.end.format("DD-MMM-YYYY HH:mm a")));
                         }
-                        $description.append($('<p/>').html('<b>Description:</b>' + calEvent.description));
+                        if (calEvent.description != null) {
+                            $description.append($('<p/>').html('<b>Description:</b>' + calEvent.description));
+                        }
                         $('#myModal #pDetails').empty().html($description);
 
                         $('#myModal').modal();
