--- a/sdf_asp_net/Views/Manage/Index.cshtml
+++ b/sdf_asp_net/Views/Manage/Index.cshtml
@@ -50,7 +50,7 @@
                 <img id="profileImg" src="@ViewBag.imgSrc" />
             }
 
-            <dt>Username:</dt>
+            <dt>Nutzername:</dt>
             <dd>
 
                 @if (Model.HasPassword)
