--- a/sdf_asp_net/Views/Shared/_Layout2.cshtml
+++ b/sdf_asp_net/Views/Shared/_Layout2.cshtml
@@ -96,7 +96,7 @@
             <div class="card">
                 <div class="list-group" id="discussion" style="width: a; height: auto; background: lavender;">
                     <a href="#" class="list-group-item list-group-item-action active">
-                        Online User
+                        Online Nutzer
                     </a>
 
                 </div>
