--- a/sdf_asp_net/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/sdf_asp_net/Views/Account/ExternalLoginConfirmation.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registrieren" />
+            <input type="submit" class="btn btn-success" value="Registrieren" />
         </div>
     </div>
 }
