--- a/sdf_asp_net/Views/Project/Create.cshtml
+++ b/sdf_asp_net/Views/Project/Create.cshtml
@@ -18,14 +18,14 @@
     <div class="form-group">
         <label for="Name">Projektname:</label>
         <div class="col-md-10">
-            <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Dein Projektname">
+            <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Ihr Projektname">
         </div>
     </div>
 
     <div class="form-group">
         <label for="Name">Beschreibung:</label>
         <div class="col-md-10">
-            <input type="text" name="description" class="form-control" id="exampleInputEmail1" placeholder="Deine Beschreibung">
+            <input type="text" name="description" class="form-control" id="exampleInputEmail1" placeholder="Ihre Beschreibung">
         </div>
     </div>
 
